Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4582

After failing over Lustre MGS node to the secondary, client mount fails with -5

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • None
    • Lustre 2.1.0, Lustre 2.2.0, Lustre 2.3.0, Lustre 2.4.0
    • 3
    • 12524

      Following are steps to reproduce the issue reliably:

      1. adjust obd_timeout from default 100 to 300
          lctl conf_param <fsname>.sys.timeout=300
      2. mount and umount the client
          mount - lustre <primary MGS ip>:<secondary MGS ip>:/<fsname> /mnt/lustre
      3. failover the MGS node to the secondary
      4. mount the client again using the same command as in step 2
      

      Then step 4 will fail with EIO.

            cliffw Cliff White (Inactive)
            cheng_shao Cheng Shao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: